--- a/main/core/theme/mb/templates/components/header.html
+++ b/main/core/theme/mb/templates/components/header.html
@@ -1,5 +1,5 @@
 {% load static %}{% load carts_tag %}{% user_carts request as carts %}
-<header class="header">
+<header class="header {% if request.path != '/' %}header--white{% endif %}">
   <div class="header__container">
     <div class="header__inner">
       <div class="header__left">
@@ -11,7 +11,7 @@
       </div>
       <nav class="header__right nav" id="nav">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#" class="nav__link">Каталог</a></li>
+          <li class="nav__item"><a href="{% url 'category' %}" class="nav__link">Каталог</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
           <li class="nav__item"><a href="#" class="nav__link">О компании</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Наши работы</a></li>
