--- a/main/core/theme/mb/templates/pages/catalog/category.html
+++ b/main/core/theme/mb/templates/pages/catalog/category.html
@@ -6,73 +6,212 @@
 {% block description %}{{ shop_setup.meta_description }}{% endblock %}
 {% block keywords %}{{ shop_setup.meta_keywords }}{% endblock %}
 {% block content %}
-<main class="page">
-  <section class="category-details">
-    <div class="category-details__container">
-      <div class="category-details__head">
-        <h1 class="category-details__title _title">Каталог памятников</h1>
-        <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-          <a href="/" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
-            class="breadcrumbs__item">
-            Главная
-            <meta itemprop="position" content="1" />
-          </a>
-          <a href="{% url 'category' %}" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
-            class="breadcrumbs__item">
-            Каталог
-            <meta itemprop="position" content="2" />
-          </a>
-        </div>
+<main>
+  <section class="category">
+    <div class="category__container">
+
+      <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
+        <a href="/" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
+          class="breadcrumbs__item">
+          Главная
+          <meta itemprop="position" content="1" />
+        </a>
+        <a href="{% url 'category' %}" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
+          class="breadcrumbs__item">
+          Каталог
+          <meta itemprop="position" content="2" />
+        </a>
       </div>
-      <div class="category-details__row">
-        <div class="category-details__col" id="filter-category">
-          <button type="button" class="close popup__close" id="close-filter"><span></span></button>
-          <form method="GET" class="filter-form">
-            {% for field in filter_form %}
-            <div class="filter__body">
-              <label class="filter__label">{{ field.label }}</label>
-              <div class="filter__inner">
-                {% for checkbox in field %}
-                <div class="form__group-boolean">
-                  {{ checkbox.tag }}
-                  <label class="checkbox-label" for="{{ checkbox.id_for_label }}">{{ checkbox.choice_label }}</label>
-                </div>
-                {% endfor %}
+      <h1 class="category__title">Входные двери в Самаре</h1>
+      <div class="category__filter filter">
+        <div class="filter__inner">
+          <div class="filter__item _active">
+            <button type="button" class="filter__btn">
+              <span class="filter__indicator"></span>
+              <span>Цена</span>
+              <svg width="9.003906" height="5.208984" viewBox="0 0 9.00391 5.20898" fill="none"
+                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <path id="Vector 10" d="M0.5 0.5L4.5 4.5L8.5 0.5" stroke="" stroke-opacity="1.000000"
+                  stroke-width="1.000000" stroke-linecap="round" />
+              </svg>
+
+            </button>
+            <div class="filter__content _active">
+              <div class="filter__checkbox-wrap">
+                <input type="checkbox" class="filter__checkbox">
+                <label for="">до 35 000</label>
+              </div>
+              <div class="filter__checkbox-wrap">
+                <input type="checkbox" class="filter__checkbox">
+                <label for="">от 35 000 до 50 000</label>
+              </div>
+              <div class="filter__checkbox-wrap">
+                <input type="checkbox" class="filter__checkbox">
+                <label for="">от 50 000 до 80 000</label>
+              </div>
+              <div class="filter__content-btn">
+                <button type="button" class="filter__reset">Сбросить</button>
+                <button type="button" class="filter__done">Готово</button>
               </div>
             </div>
-            {% endfor %}
-            <button type=" submit" class="filter__submit">Фильтровать</button>
-          </form>
-        </div>
-        <div class="category-details__col">
-          <button type="button" class="category-details__filter"><i
-              class="fa-solid fa-arrow-up-wide-short"></i></button>
-          {% if products %}
-          <div class="index-catalog__cards">{% for product in products %}
-            {% include "../../includes/card.html" with product=product %} {% endfor %}</div>
-          {% else %}
-          <div class="empty-info">
-            <p>Товара нет</p>
           </div>
-          {% endif %}
+          <div class="filter__item">
+            <button type="button" class="filter__btn">
+              <span class="filter__indicator"></span>
+              <span>Цвет</span>
+              <svg width="9.003906" height="5.208984" viewBox="0 0 9.00391 5.20898" fill="none"
+                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <path id="Vector 10" d="M0.5 0.5L4.5 4.5L8.5 0.5" stroke="" stroke-opacity="1.000000"
+                  stroke-width="1.000000" stroke-linecap="round" />
+              </svg>
+
+            </button>
+            <div class="filter__content">
+              <div class="filter__checkbox-wrap">
+                <input type="checkbox" class="filter__checkbox">
+                <label for="">до 35 000</label>
+              </div>
+              <div class="filter__checkbox-wrap">
+                <input type="checkbox" class="filter__checkbox">
+                <label for="">от 35 000 до 50 000</label>
+              </div>
+              <div class="filter__checkbox-wrap">
+                <input type="checkbox" class="filter__checkbox">
+                <label for="">от 50 000 до 80 000</label>
+              </div>
+              <div class="filter__content-btn">
+                <button type="button" class="filter__reset">Сбросить</button>
+                <button type="button" class="filter__done">Готово</button>
+              </div>
+            </div>
+          </div>
+          <div class="filter__item">
+            <button type="button" class="filter__btn">
+              <span class="filter__indicator"></span>
+              <span>Форма</span>
+              <svg width="9.003906" height="5.208984" viewBox="0 0 9.00391 5.20898" fill="none"
+                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <path id="Vector 10" d="M0.5 0.5L4.5 4.5L8.5 0.5" stroke="" stroke-opacity="1.000000"
+                  stroke-width="1.000000" stroke-linecap="round" />
+              </svg>
+
+            </button>
+            <div class="filter__content">
+              <div class="filter__checkbox-wrap">
+                <input type="checkbox" class="filter__checkbox">
+                <label for="">до 35 000</label>
+              </div>
+              <div class="filter__checkbox-wrap">
+                <input type="checkbox" class="filter__checkbox">
+                <label for="">от 35 000 до 50 000</label>
+              </div>
+              <div class="filter__checkbox-wrap">
+                <input type="checkbox" class="filter__checkbox">
+                <label for="">от 50 000 до 80 000</label>
+              </div>
+              <div class="filter__content-btn">
+                <button type="button" class="filter__reset">Сбросить</button>
+                <button type="button" class="filter__done">Готово</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      {% if products.paginator.count > 15 %}
-      <div class="pagging">
-        <a href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
-          class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}">«</a>
-        <ul class="pagging__list">
-          {% for page in products.paginator.page_range %}
-          {% if page >= products.number|add:-2 and page <= products.number|add:2 %} <li>
-            <a href="?{% chenge_params page=page %}"
-              class="pagging__item {% if products.number == page %}_active{% endif %}">{{page}}</a>
-            </li>
-            {% endif %} {% endfor %}
-        </ul>
-        <a href="{% if products.has_next %}?{% chenge_params page=products.next_page_number %}{% else %}#{% endif %}"
-          class="pagging__arrow">»</a>
+    </div>
+    <div class="best-choice__grid category-products">
+      <div class="best-choice__item card-product">
+        <div class="card-product__image">
+          <img src="{% static 'theme/mb/images/product/dm15-belenyi.png' %}" alt="" class="image">
+        </div>
+        <div class="card-product__colors">
+          <button class="card-product__color _active" style="background-color: #C2B46B"
+            data-image="{% static 'theme/mb/images/product/dm15-belenyi.png' %}"></button>
+          <button class="card-product__color" style="background-color: #E0CBCB"
+            data-image="{% static 'theme/mb/images/product/dm16-grey.png' %}"></button>
+          <button class="card-product__color" style="background-color: #C2B46B"
+            data-image="{% static 'theme/mb/images/product/dm17-blanko.png' %}"></button>
+          <button class="card-product__color" style="background-color: #7D7C56"
+            data-image="{% static 'theme/mb/images/product/dm18-moreny.png' %}"></button>
+          <button class="card-product__color" style="background-color: #E0CBCB"
+            data-image="{% static 'theme/mb/images/product/dm16-grey.png' %}"></button>
+          <div class="card-product__color-count">+5</div>
+        </div>
+        <h3 class="card-product__title">Guardian 1234</h3>
+        <p class="card-product__descr">Серый металл бежевый дуб</p>
+        <div class="card-product__bottom">
+          <div class="card-product__price">32990 ₽ <s>40990 ₽</s></div>
+          <button class="card-product__btn">Оставить заявку</button>
+        </div>
       </div>
-      {% endif %}
+      <div class="best-choice__item card-product">
+        <div class="card-product__image">
+          <img src="{% static 'theme/mb/images/product/dm16-grey.png' %}" alt="">
+        </div>
+        <div class="card-product__colors">
+          <button class="card-product__color _active" style="background-color: #C2B46B"></button>
+          <button class="card-product__color" style="background-color: #E0CBCB"></button>
+          <button class="card-product__color" style="background-color: #C2B46B"></button>
+          <button class="card-product__color" style="background-color: #7D7C56"></button>
+          <button class="card-product__color" style="background-color: #E0CBCB"></button>
+          <div class="card-product__color-count">+25</div>
+        </div>
+        <h3 class="card-product__title">Guardian 1234</h3>
+        <p class="card-product__descr">Серый металл бежевый дуб</p>
+        <div class="card-product__bottom">
+          <div class="card-product__price">32990 ₽ <s>40990 ₽</s></div>
+          <button class="card-product__btn">Оставить заявку</button>
+        </div>
+      </div>
+      <div class="best-choice__item card-product">
+        <div class="card-product__image">
+          <img src="{% static 'theme/mb/images/product/dm17-blanko.png' %}" alt="">
+        </div>
+        <div class="card-product__colors">
+          <button class="card-product__color _active" style="background-color: #C2B46B"></button>
+          <button class="card-product__color" style="background-color: #E0CBCB"></button>
+          <button class="card-product__color" style="background-color: #C2B46B"></button>
+        </div>
+        <h3 class="card-product__title">Guardian 1234</h3>
+        <p class="card-product__descr">Серый металл бежевый дуб</p>
+        <div class="card-product__bottom">
+          <div class="card-product__price">32990 ₽ <s>40990 ₽</s></div>
+          <button class="card-product__btn">Оставить заявку</button>
+        </div>
+      </div>
+      <div class="best-choice__item card-product">
+        <div class="card-product__image">
+          <img src="{% static 'theme/mb/images/product/dm18-moreny.png' %}" alt="">
+        </div>
+        <div class="card-product__colors">
+          <button class="card-product__color _active" style="background-color: #C2B46B"></button>
+          <button class="card-product__color" style="background-color: #E0CBCB"></button>
+          <button class="card-product__color" style="background-color: #C2B46B"></button>
+          <button class="card-product__color" style="background-color: #7D7C56"></button>
+        </div>
+        <h3 class="card-product__title">Guardian 1234</h3>
+        <p class="card-product__descr">Серый металл бежевый дуб</p>
+        <div class="card-product__bottom">
+          <div class="card-product__price">32990 ₽ <s>40990 ₽</s></div>
+          <button class="card-product__btn">Оставить заявку</button>
+        </div>
+      </div>
+    </div>
+    {% if products.paginator.count > 15 %}
+    <div class="pagging">
+      <a href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
+        class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}">«</a>
+      <ul class="pagging__list">
+        {% for page in products.paginator.page_range %}
+        {% if page >= products.number|add:-2 and page <= products.number|add:2 %} <li>
+          <a href="?{% chenge_params page=page %}"
+            class="pagging__item {% if products.number == page %}_active{% endif %}">{{page}}</a>
+          </li>
+          {% endif %} {% endfor %}
+      </ul>
+      <a href="{% if products.has_next %}?{% chenge_params page=products.next_page_number %}{% else %}#{% endif %}"
+        class="pagging__arrow">»</a>
+    </div>
+    {% endif %}
     </div>
   </section>
 </main>
